# mono-bmp-reader

./: CMakeLists.txt  Makefile  bmp_to_file  temp.txt
logos/: Readme.txt  Thumbs.db
src/: bmp.h  main.c
